<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="about_info4"></string>
    <string name="action_settings">Settings</string>
    <string name="time">Hello world!</string>
    <string name="tz_page1">首页</string>
    <string name="tz_page2">我的账户</string>
    <string name="tz_page3">投资</string>
    <string name="tz_page4">更  多</string>
    <string name="logininfo">点击此处登录</string>
    <string name="progressbar">完成度:</string>
    <string name="load">读取中</string>
    <string name="submenu1">登录</string>
    <string name="submenu2">更多</string>
    <string name="submenu3">网贷社区</string>
    <string name="tz_text_type">流转</string>
    <string name="tz_text_info">zzxzx。</string>
    <string name="tz_text_lilv">年利率</string>
    <string name="tz_text_jine">金额</string>
    <string name="tz_text_qixian">期限</string>
    <string name="tz_text_jiangl">奖励</string>
    <string name="tz_text_jiner">金额</string>
    <string name="tz_text_lv">利率</string>
    <string name="tz_text_tuijian">推荐</string>
    <string name="tz_text_jindu">进度</string>
    <string name="tz_text_gonggao">公告</string>
    <string name="name">账户:</string>
    <string name="nameinfo">用户名/邮箱</string>
    <string name="passw">密码:    </string>
    <string name="passwinfo">密码</string>
    <string name="login">登&#160;&#160;&#160;&#160;&#160;录</string>
    <string name="exit_login">退出登录</string>
    <string name="login_info1">记住密码</string>
    <string name="login_info2">我要注册</string>
    <string name="login_info3">忘记密码?</string>
    <string name="touzi">我要投资</string>
    <string name="register">完成</string>
    <string name="register1">注册</string>
    <string name="register_0">用&#160;&#160;户&#160;&#160;名:</string>
    <string name="register_1">邮箱</string>
    <string name="register_2">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="register_3">确认密码:</string>
    <string name="register_4">建议使用4-20个字符</string>
    <string name="register_5">6-16个字符，建议使用字母加数字的组合密码</string>
    <string name="register_6">验&#160;&#160;证&#160;&#160;码:</string>
    <string name="register_7">手机号码:</string>
    <string name="register_8">获取验证码</string>
    <string name="register_name">输入用户名</string>
    <string name="register_password">设置密码</string>
    <string name="register_password2">确认密码</string>
    <string name="register_eml">输入邮箱地址</string>
    <string name="peo_password_1">修改密码</string>
    <string name="peo_password_2">提交修改</string>
    <string name="peo_password_1_1">旧密码</string>
    <string name="peo_password_1_2">新密码</string>
    <string name="peo_password_1_3">确认密码</string>
    <string name="deal_1">发生日期</string>
    <string name="deal_2">类型</string>
    <string name="deal_3">影响金额</string>
    <string name="peo_info">个人资料</string>
    <string name="peo_info_0">资金信息</string>
    <string name="peo_data_1">账户详情</string>
    <string name="peo_data_1_1">净资产:</string>
    <string name="peo_data_1_2">账户总额:</string>
    <string name="peo_data_1_3">可用余额:</string>
    <string name="peo_data_1_4">冻结金额:</string>
    <string name="peo_data_1_5">已赚利息:</string>
    <string name="peo_data_1_6">净付利息:</string>
    <string name="peo_data_1_7">已赚奖励:</string>
    <string name="peo_data_2">待还详情</string>
    <string name="peo_data_2_1">最近待还时间:</string>
    <string name="peo_data_2_2">最近待还金额:</string>
    <string name="peo_data_2_3">借款总额:</string>
    <string name="peo_data_2_4">待还总额:</string>
    <string name="peo_data_3">待收详情</string>
    <string name="peo_data_3_1">最近待收时间:</string>
    <string name="peo_data_3_2">最近待收金额:</string>
    <string name="peo_data_3_3">待收总额:</string>
    <string name="peo_data_3_4">待收利息:</string>
    <string name="peo_level">会员等级:</string>
    <string name="peo_vip_time">VIP期限:</string>
    <string name="peo_real_name">真实姓名:</string>
    <string name="peo_real_name_1">真实姓名</string>
    <string name="peo_Line_of_credit">信用额度:</string>
    <string name="peo_warranties">担保额度:</string>
    <string name="peo_customer_service">您的客服:</string>
    <string name="peo_tel">联系电话:</string>
    <string name="peo_customer_service_tel">客服电话:</string>
    <string name="peo_customer_service_qq">客服QQ:</string>
    <string name="peo_withdrawal">提现账户</string>
    <string name="peo_info2">账户设置</string>
    <string name="peo_info3">奖金记录</string>
    <string name="peo_info4">我要提现</string>
    <string name="peo_info5">冻结总额:</string>
    <string name="peo_info6">修改密码</string>
    <string name="peo_info7">奖金记录</string>
    <string name="peo_info8">会员登录</string>
    <string name="peo_info9">可用余额:</string>
    <string name="peo_info10">账户总额:</string>
    <string name="peo_info11">待收总额:</string>
    <string name="peo_info12">  关于荣盛</string>
    <string name="peo_info_safe_1">实名认证</string>
    <string name="peo_info_safe_2">登录密码</string>
    <string name="peo_info_safe_3">支付密码</string>
    <string name="peo_info_safe_4">安全问题:</string>
    <string name="peo_info_safe_5">手机号码</string>
    <string name="peo_info_safe_6">电子邮箱</string>
    <string name="peo_info_safe_7">安全退出</string>
    <string name="peo_info_money_1">资产总额:</string>
    <string name="peo_info_money_2">可用余额:</string>
    <string name="peo_info_money_3">冻结总额:</string>
    <string name="peo_info_money_3_1">冻结余额:</string>
    <string name="peo_info_money_4_1">代收余额:</string>
    <string name="peo_info_money_4">待收总额:</string>
    <string name="peo_info_money_5">待收利息	:</string>
    <string name="peo_info_money_6">提现总额:</string>
    <string name="peo_info_money_7">充值总额:</string>
    <string name="peo_info_money_8">充值总额:</string>
    <string name="peo_info_money_9">最近待还金额:</string>
    <string name="peo_info_money_10">最近待还时间:</string>
    <string name="peo_info_money_11">最近待收金额:</string>
    <string name="peo_info_money_12">最近待收时间:</string>
    <string name="peo_info_investment_1">竞标中投资:</string>
    <string name="peo_info_investment_2">回收中投资:</string>
    <string name="peo_info_investment_3">收完的投资:</string>
    <string name="peo_info_investment_4">逾期的投资:</string>
    <string name="peo_info_investment_5">代偿网站:</string>
    <string name="peo_info_investment_6">累计投资金额:</string>
    <string name="peo_info_investment_7">代偿的投资:</string>
    <string name="peo_info_borrowing_1">发标中借入:</string>
    <string name="peo_info_borrowing_2">偿还中借入:</string>
    <string name="peo_info_borrowing_3">还清的借入:</string>
    <string name="peo_info_borrowing_4">逾期的借入:</string>
    <string name="peo_info_borrowing_5">累计借入金额:</string>
    <string name="peo_info_withdrawal_1">提款期限:</string>
    <string name="peo_info_withdrawal_2">可提现金额:</string>
    <string name="peo_info_withdrawal_3">提现金额:</string>
    <string name="peo_info_withdrawal_4">提现金额</string>
    <string name="peo_info_withdrawal_5">单笔提现金额限制为100-30000元</string>
    <string name="peo_info_withdrawal_6">输入支付密码</string>
    <string name="tx_dx_pass">输入定向标密码</string>
    <string name="peo_info_withdrawal_7">72小时/24小时</string>
    <string name="peo_info_withdrawal_8">确认提现</string>
    <string name="peo_info_withdrawal_9">开户银行:</string>
    <string name="peo_info_withdrawal_10">银行账号:</string>
    <string name="peo_info_withdrawal_11">银行账号</string>
    <string name="peo_info_bonus_1">发生日期</string>
    <string name="peo_info_bonus_2">奖励金额</string>
    <string name="tz_item_0">投标详情</string>
    <string name="tz_item_1">借款金额:</string>
    <string name="tz_item_2">年化利率:</string>
    <string name="tz_item_3">借款期限:</string>
    <string name="tz_item_88">请输入借款期限</string>
    <string name="tz_item_4">还款:</string>
    <string name="tz_item_5">最小投标:</string>
    <string name="tz_item_6">最大投标:</string>
    <string name="tz_item_7">投标进度:</string>
    <string name="tz_item_8">剩余时间:</string>
    <string name="tz_item_10">借款综述</string>
    <string name="tz_item_101">风险控制</string>
    <string name="tz_item_9">购买</string>
    <string name="tz_item_11">发布日期:</string>
    <string name="tz_item_12">奖励:</string>
    <string name="tz_item_13">投标次数:</string>
    <string name="tz_item_14">还差:</string>
    <string name="tz_item2_1">账户余额:</string>
    <string name="tz_item2_2">起投金额:</string>
    <string name="tz_item2_3">最大投标:</string>
    <string name="tz_item2_4">项目还差:</string>
    <string name="tz_item2_4_1">可投金额:</string>
    <string name="tz_item2_5">投标金额:</string>
    <string name="tz_item2_6">支付密码:</string>
    <string name="tz_item2_7">注意:点击确认表示您将投标金额并同意支付,同一用户对同一个标限投5次</string>
    <string name="tz_item2_8">确认付款</string>
    <string name="tz_item2_9">输入金额大于100元</string>
    <string name="tz_item2_10">立即投标</string>
    <string name="tz_item2_11">定向标密码:</string>
    <string name="tz_item2_12">请输入定向标密码</string>
    <string name="tz_item3_1">流转周期:</string>
    <string name="tz_item3_2">融资金额:</string>
    <string name="tz_item3_6">剩余份数:</string>
    <string name="tz_item3_7">已认购:</string>
    <string name="tz_item3_10">每份金额:</string>
    <string name="tz_item3_3">进度:</string>
    <string name="tz_item3_2_1">可用余额:</string>
    <string name="tz_item3_2_2">每份:</string>
    <string name="tz_item3_2_3">最大投标:</string>
    <string name="tz_item3_2_4">还差:</string>
    <string name="tz_item3_2_5">奖励:</string>
    <string name="tz_item3_2_6">支付密码:</string>
    <string name="tz_item3_2_7">注意:点击确认表示您将投标金额并同意支付</string>
    <string name="tz_item3_2_8">购买份数:</string>
    <string name="tz_item3_2_9">认购期限:</string>
    <string name="tz_item3_2_10">最小期限:</string>
    <string name="tz_fen">份</string>
    <string name="tz_yue">月</string>
    <string name="erro_login1">请输入帐号或者密码</string>
    <string name="erro_login2">帐号或者密码错误</string>
    <string name="news"></string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新..</string>
    <string name="pull_to_refresh_release_label">松手获取更多...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">efresh_tap..</string>
    <string name="about_info1">当前版本号:</string>
    <string name="about_info2">适用于Android2.1及以上操作系统</string>
    <string name="tzdetail">投标记录</string>
    <string name="tzdetail_1">有效:</string>
    <string name="tzdetail_2">投标人:</string>
    <string name="newsTitle">平台公告</string>
    <string name="more_0">更多</string>
    <string name="more_1">分享给好友</string>
    <string name="more_2">检查更新</string>
    <string name="more_3">关于我们</string>
    <string name="more_4">网贷社区</string>
    <string name="help_0">帮助</string>
    <string name="help_1_1">1.帮助</string>
    <string name="help_1_2">帮助</string>
    <string name="help_2_1">2.帮助</string>
    <string name="help_2_2">帮助</string>
    <string name="help_3_1">3.帮助</string>
    <string name="help_3_2">帮助</string>
    <string name="help_4_1">4.帮助</string>
    <string name="help_4_2">帮助</string>
    <string name="help_5_1">5.帮助</string>
    <string name="help_5_2">帮助</string>
    <string name="js">计算器</string>
    <string name="js_1">投标金额</string>
    <string name="js_3">投标奖励</string>
    <string name="toast8">请输入新密码</string>
    <string name="toast8_0">请输入当前支付密码(尚未设置请输入登录密码)</string>
    <string name="toast8_1">请重复输入新密码</string>
    <string name="newpassword">新密码</string>
    <string name="cz_password">重复密码</string>
    <string name="wcheng">完&#160;&#160;&#160;&#160;&#160;成</string>
    <string name="dqmm">当前密码</string>
    <string name="tz_biaoname">请输入标名</string>
    <string name="tz_jiekuanmooney">请输入借款金额</string>
    <string name="tz_nianlilv">请输入年利率</string>
    <string name="tz_antian">按天</string>
    <string name="tz_radio1">不设置奖励</string>
    <string name="tz_radio2">按投标金额比例奖励</string>
    <string name="tz_radio3">按固定金额分摊奖励</string>
    <string name="tz_tbsm">投标说明</string>
    <string name="tz_zi">200字以内</string>
    <string name="pay_kind_title">还款方式</string>
    <string name="pay_kind_title2">选择标种</string>
    <string name="pay_kind_title3">借款用途</string>
</resources>