<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical" >

    <include layout="@layout/page_head_sx" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="1dip"
            android:background="@drawable/button_p_kuang4"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                style="@style/black20Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/dqmm" />

            <EditText
                android:id="@+id/ed_itold"
                style="@style/gray13Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:hint="@string/toast8_0"
                android:paddingLeft="10dp"
                android:password="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="1dip"
            android:background="@drawable/button_p_kuang4"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                style="@style/black20Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/newpassword" />

            <EditText
                android:id="@+id/ed_itpassw"
                style="@style/gray13Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:hint="@string/toast8"
                android:paddingLeft="28dp"
                android:password="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="1dip"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                style="@style/black20Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/cz_password" />

            <EditText
                android:id="@+id/ed_itpassw2"
                style="@style/gray13Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:hint="@string/toast8_1"
                android:paddingLeft="9dp"
                android:password="true" >
            </EditText>
        </LinearLayout>

        <TextView
            style="@style/gray13Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:text="6-16位字符,建议使用字母加数字的组合" />

        <Button
            android:id="@+id/btn_jiayoyi"
            style="@style/white18Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_yj"
            android:padding="10dp"
            android:text="@string/wcheng" />

        <RelativeLayout
            android:id="@+id/getPw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_marginTop="100dp" >

            <TextView
                style="@style/gray13Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="找回支付密码" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>