<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical" >

    <include layout="@layout/page_head" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/item_show_kind"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/jk_layout"
                    android:padding="10dp"
                    android:tag="6" >

                    <TextView
                        style="@style/black17Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="标种介绍" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/p_jt" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item_choice_kind"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/jk_layout"
                    android:padding="10dp" >

                    <Spinner
                        android:id="@+id/pay_kind_list2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:entries="@array/pay_kind_list2"
                        android:prompt="@string/pay_kind_title2" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/p_jt" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/jk_layout"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <TextView
                        style="@style/black17Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="借款名称" />

                    <EditText
                        android:id="@+id/l_title"
                        style="@style/gray17Text"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/jk_layout_edt"
                        android:hint="@string/tz_biaoname"
                        android:singleLine="true" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/jk_layout"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    style="@style/black17Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="借款金额" />

                <EditText
                    android:id="@+id/l_amount"
                    style="@style/gray17Text"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="5"
                    android:background="@drawable/jk_layout_edt"
                    android:hint="@string/tz_jiekuanmooney"
                    android:inputType="number"
                    android:singleLine="true" >
                </EditText>

                <TextView
                    android:id="@+id/yuan"
                    style="@style/red17Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:text="元" />
            </LinearLayout>
            

             <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/jk_layout"
                    android:padding="10dp" >

                     <Spinner
                        android:id="@+id/pay_kind_list3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:entries="@array/pay_kind_list3"
                        android:prompt="@string/pay_kind_title3" />  

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/p_jt" />
                </RelativeLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/jk_layout"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    style="@style/black17Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="年利率　" />

                <EditText
                    android:id="@+id/l_interest_rate"
                    style="@style/gray17Text"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="5"
                    android:background="@drawable/jk_layout_edt"
                    android:hint="@string/tz_nianlilv"
                    android:inputType="number"
                    android:singleLine="true" >
                </EditText>

                <TextView
                    android:id="@+id/yuan1"
                    style="@style/red17Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:text="％" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/jk_layout"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <TextView
                        style="@style/black17Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="借款期限" />

                    <EditText
                        android:id="@+id/borrow_time"
                        style="@style/gray17Text"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="5"
                        android:background="@drawable/jk_layout_edt"
                        android:hint="@string/tz_item_88"
                        android:inputType="number"
                        android:singleLine="true" >
                    </EditText>

                    <TextView
                        android:id="@+id/bttps"
                        style="@style/red17Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:background="@color/white"
                        android:singleLine="true"
                        android:text="1个月"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/borrow_time_uin_flag"
                        style="@style/red17Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:text="月" />
                </LinearLayout>

                <Button
                    android:id="@+id/change_time_kind_btn"
                    style="@style/black17Text"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/jk_layout_edt"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/tz_antian" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/jk_layout"
                android:padding="10dp" >

                <Spinner
                    android:id="@+id/pay_kind_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:entries="@array/pay_kind_list"
                    android:prompt="@string/pay_kind_title" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/p_jt" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/jk_layout"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/direct_title_flag"
                    style="@style/black17Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="是否定向标" />

                <EditText
                    android:id="@+id/direct_pwd"
                    style="@style/gray17Text"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/direct_flg"
                    android:layout_toRightOf="@+id/direct_title_flag"
                    android:layout_weight="5"
                    android:background="@drawable/jk_layout_edt"
                    android:hint="@string/tz_item2_12"
                    android:inputType="number"
                    android:singleLine="true"
                    android:visibility="gone" >
                </EditText>

                <ToggleButton
                    android:id="@+id/direct_flg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/torggle_bg"
                    android:textColor="@color/red"
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>

            <TextView
                style="@style/black18Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/js_3" />

            <RadioGroup
                android:id="@+id/reward_kind"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/jk_layout"
                android:checkedButton="@+id/b1"
                android:orientation="vertical" >

                <!-- 默认选中b1 -->

                <RadioButton
                    android:id="@+id/b1"
                    style="@style/gray16Text"
                    android:text="@string/tz_radio1" />

                <RadioButton
                    android:id="@+id/b2"
                    style="@style/gray16Text"
                    android:text="@string/tz_radio2" />

                <RadioButton
                    android:id="@+id/b3"
                    style="@style/gray16Text"
                    android:text="@string/tz_radio3"
                    android:visibility="gone" />
            </RadioGroup>

            <TextView
                style="@style/black18Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/tz_tbsm" />

            <EditText
                android:id="@+id/other_tips"
                style="@style/gray18Text"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/jk_layout_edt"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:maxLines="8" />

            <TextView
                android:id="@+id/tv_tv"
                style="@style/gray10Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:text="@string/tz_zi" />

            <Button
                android:id="@+id/submit_lendmoney"
                style="@style/white20Text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_b_back1"
                android:gravity="center"
                android:padding="10dp"
                android:text="发    布" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>